src/objects/silverpop__Silverpop_PH__c.object
<CustomObject>
    <description>Used for validation of visualforce.  THIS IS NOT USED OT SAVE ANY ITEMS</description>
    <fields>
        <fullName>silverpop__From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>silverpop__Reply_To_Email__c</fullName>
        <description>Used for Reply To Email Validation</description>
        <label>Reply-To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>silverpop__Send_Date_Time__c</fullName>
        <description>Used for Date Time Validation</description>
        <label>Send Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Silverpop PH</label>
    <nameField>
        <label>Silverpop PH Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Silverpop PHs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>